	Math::BigFloat   v1.29
	te@null:~ > perl -Mbigrat=v
	Math::BigInt     v1.52 lib => Math::BigInt::Calc v0.23
	Math::BigFloat   v1.29
	Math::BigRat     v0.02 
2002-02-26 Tels 0.06
  * options can now be in short (one letter) or long form
  * new option: t or trace 
  * old option: v or version
  * included Math::BigInt::Trace for trace
2002-03-05 Tels 0.07
  * new options: a (accuracy) and p (precision)
  * doc and tests improved quite a lot
2002-03-11 Tels 0.08
  * doc fixes/types and 'l' is equal to 'lib' (thanx to Dan Sullivan)
  * added tests for l, lib, and foo (the latter is expected to die)
  * uses Math::BigInt::Lite when it finds it, otherwise just plain M::BI
  * added tests for loading of Lite
  * version output includes Math::BigInt::Lite when it was used
  * rewritten README and INSTALL document
2002-03-12 Tels 0.09
  * added bigint.pm as a better way of perl -MMath::BigInt=:constant
  * tests for that
  * bigrat: some typos
2002-03-17 Tels 0.10
  * bigint: handle floating point constants like '4.5', '45e-1', '4.56e1' by
            truncating them to integer, so:
    perl -Mbigint -le 'print 4.5+4.5'
    8
2002-03-25 Tels 0.11
  * testsuite failed under Lite due to specific tests for MBI
  * removed the printing of "Loading ..." to STDERR (interfered w/ something)
  * more tests for bigrat and bignum
  * trace.t remvoed due to VMS problems
2002-08-13 Tels 0.12
  * INSTALLDIRS => perl
  * document that use bignum/bigint/bigrat is global, not only in current block
  * added default exported inf() and NaN() routines to fix the second example:
    perl -Mbignum -e 'print 1 + inf,"\n"'
    perl -Mbignum -e 'print inf + inf,"\n"'
  * tests for inf()/NaN()
2002-08-24 Tels 0.13
  * added a LOT to the documentation
  * tests don't go "huh" anymore
  * bninfnan.t has the correct setup for testing in the core

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>