@@ -5,8 +5,8 @@ WriteMakefile(
     'NAME'		=> 'bignum',
     'VERSION_FROM'	=> 'lib/bignum.pm', # finds $VERSION
     'PREREQ_PM'		=> {
-			Math::BigInt => 1.62,
-			Math::BigFloat => 1.37,
+			Math::BigInt => 1.65,
+			Math::BigFloat => 1.39,
 			Math::BigRat => 0.09,
 			}, # e.g., Module::Name => 1.1
     'INSTALLDIRS'       => 'perl',
